Environment setup and complete navbar

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+*{
+  font-family: 'Poppins', sans-serif;
+  border: none;
+  outline: none;
+  box-sizing: border-box;
+  text-decoration: none;
+  list-style-type: none;
+}
 .App {
   text-align: center;
 }
