Complete with product detail and jhakanaka nav bar like nav links depend on user

--- a/src/Components/HomeInventory/HomeInventory.css
+++ b/src/Components/HomeInventory/HomeInventory.css
@@ -13,3 +13,13 @@
     gap: 2rem;
     justify-items: center;
 }
+.manage-inventory{
+    background-color: #fff;
+    color: #000;
+    padding: 10px 25px;
+    border-radius: 25px;
+    justify-content: center;
+    margin: 2rem auto 1rem auto;
+    display: flex;
+    width: 20%;
+}
