--- a/src/Components/ManageInventory/ManageInventory.css
+++ b/src/Components/ManageInventory/ManageInventory.css
@@ -13,12 +13,15 @@
     gap: 2rem;
     color: #fff;
 }
-.add-new-form h2{
-    font-weight: 600;
-    margin-top: 3rem;
-}
-.form-container-add{
+.manage-inventory-sec a{
+    background-color: #fff;
+    color: #000;
+    padding: 10px 25px;
+    border-radius: 25px;
+    justify-content: center;
+    margin: 2rem auto 1rem auto;
     display: flex;
-    flex-direction: column;
-    gap: 1rem;
+    width: 20%;
+    cursor: pointer;
+    font-size: 15px;
 }
